kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kiii-ns
  labels:
    name: kiii-ns
