kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: kiii-ns
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    app: mongo
